--- a/joos_testing/build.gradle
+++ b/joos_testing/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 java {
@@ -12,7 +13,11 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+javafx {
+    modules = [ 'javafx.controls', 'javafx.graphics' ]
+}
+
 dependencies {
-    implementation "com.github.amarcolini.joos:gui:master-SNAPSHOT"
-    implementation "com.github.amarcolini.joos:navigation:master-SNAPSHOT"
+    implementation "com.github.amarcolini.joos:gui:0.1.1-alpha:all"
+//    implementation "com.github.amarcolini.joos:navigation:master-SNAPSHOT"
 }
