--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -28,8 +28,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'org.firstinspires.ftc:gameAssets-FreightFrenzy:1.0.0'
-    implementation 'com.github.amarcolini.joos:command:master-SNAPSHOT'
-    implementation 'com.github.amarcolini.joos:navigation:master-SNAPSHOT'
+    implementation 'com.github.amarcolini.joos:command:0.1.2-alpha'
+    implementation 'com.github.amarcolini.joos:navigation:0.1.2-alpha'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.3'
 }
