--- a/joos_testing/build.gradle
+++ b/joos_testing/build.gradle
@@ -14,10 +14,11 @@ repositories {
 }
 
 javafx {
+    version = "11.0.2"
     modules = [ 'javafx.controls', 'javafx.graphics' ]
 }
 
 dependencies {
-    implementation "com.github.amarcolini.joos:gui:0.1.4-alpha:all"
+    implementation "com.github.amarcolini.joos:gui:0.1.5-alpha:all"
 //    implementation "com.github.amarcolini.joos:navigation:master-SNAPSHOT"
 }
